[workspace]
members = ["src/*"]
default-members = []
resolver = "2"

[workspace.lints.rust]
missing_debug_implementations = "warn"

[workspace.lints.clippy]
ptr_as_ptr = "warn"
undocumented_unsafe_blocks = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_sign_loss = "warn"
exit = "warn"
tests_outside_test_module = "warn"
assertions_on_result_states = "warn"
error_impl_error = "warn"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
strip = "none"

[profile.bench]
strip = "debuginfo"
